# studyAbroad

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DATABASE.md  MONOREPO-MIGRATION.md  Makefile  README.md  SETUP-DATABASE.md  SETUP-LOCAL-DEV.md  bootstrap_claude_speckit.sh  package-lock.json  package.json  tree.md
apps/study-abroad/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .coverage  .env.example  .env.example.new  Dockerfile  INTEGRATION_GUIDE.md  LINTING_FIXES.md  README.md  alembic.ini  coverage.json  coverage.xml  pyproject.toml  pytest.ini  test_integration.py  validate_openapi.py  validate_quickstart.py
backend/alembic/: MIGRATION_CHECKLIST.md  README.md  env.py
backend/alembic/versions/: 6f815ac9ca51_initial_schema.py
backend/docs/: deployment.md
backend/infrastructure/: README.md  cloud-scheduler-delete.yaml  cloud-scheduler-expire.yaml
backend/mutants/: test_integration.py
backend/mutants/src/: __init__.py  config.py  dependencies.py  main.py
backend/mutants/tests/: __init__.py  conftest.py  test_user_model.py  test_user_story_3_unit.py
backend/scripts/: migrate.sh
backend/src/: config.py  dependencies.py  main.py
backend/src/config/: __init__.py  environment.py  loader.py  presets.py
backend/src/database/: __init__.py  types.py
backend/src/feature_flags/: __init__.py  evaluator.py  types.py
backend/src/lib/: __init__.py  supabase.py
backend/src/logging_lib/: __init__.py  correlation.py  logger.py  rotation.py  sanitizer.py
backend/src/middleware/: __init__.py  rate_limiter.py
backend/tests/: conftest.py  test_ai_service.py  test_api_endpoints.py  test_auth_service.py  test_cron_routes.py  test_debugging_regressions.py  test_health_routes.py  test_log_rotation.py  test_payment_service.py  test_report_service.py  test_repositories.py  test_user_story_2_unit.py  test_user_story_3_unit.py
docs/: SETUP.md  (+14 more)
(+532 files in other folders)
